--- a/client/src/app/features/user/pages/login/login.component.html
+++ b/client/src/app/features/user/pages/login/login.component.html
@@ -19,7 +19,9 @@
                 />
             </h1>
         </i>
-        <app-email-error *ngIf="form.get('email')?.touched"></app-email-error>
+        @if(form.get('email')?.touched){
+        <app-email-error></app-email-error>
+        }
     </section>
     <section style="height: 14%; width: 90%" class="centered-flex">
         <i>
@@ -33,7 +35,9 @@
                 />
             </h1>
         </i>
+        @if(form.get('password')?.touched){
         <app-password-error *ngIf="form.get('password')?.touched"></app-password-error>
+        }
     </section>
     <button id="verify-button" style="align-items: center">Влез</button>
     <hr />
