Add login and register functionality

--- a/client/src/app/features/user/pages/login/login.component.html
+++ b/client/src/app/features/user/pages/login/login.component.html
@@ -36,7 +36,7 @@
             </h1>
         </i>
         @if(form.get('password')?.touched){
-        <app-password-error *ngIf="form.get('password')?.touched"></app-password-error>
+        <app-password-error></app-password-error>
         }
     </section>
     <button id="verify-button" style="align-items: center">Влез</button>
