--- a/client/src/app/features/user/components/password-error/password-error.component.html
+++ b/client/src/app/features/user/components/password-error/password-error.component.html
@@ -1,1 +1,5 @@
-<p>password-error works!</p>
+@if(password?.errors?.['required']) {
+<p class="error">Паролата е задължителна!</p>
+} @if(password?.errors?.['minlength']) {
+<p class="error">Паролата трябва да е дълга поне 8 символа!</p>
+}
