--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -43,3 +43,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   ::ng-deep .mat-snack-bar-container {
     z-index: 9999;  /* Ensure it's on top of other content */
   }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
