Create help and about pages

--- a/client/src/app/features/home/pages/about/about.component.html
+++ b/client/src/app/features/home/pages/about/about.component.html
@@ -1,1 +1,20 @@
-<p>about works!</p>
+
+    <div class="about-panel">
+        <h2>🌍 Добре дошли в GeoBulgaria!</h2>
+        <p>GeoBulgaria е интерактивна платформа, създадена с цел да предоставя лесен и удобен достъп до географска информация за България.</p>
+    
+        <p>Чрез нашата карта можете да разгледате различни региони, да получите информация за важни обекти и да научите повече за природните и културни забележителности на страната.</p>
+    
+        <h3>📢 Какво предлагаме?</h3>
+        <ul>
+            <li>✔️ Интерактивна карта с информация за различни региони</li>
+            <li>✔️ Възможност за регистрация и персонализиране на профила</li>
+            <li>✔️ Бърз достъп до полезни географски факти</li>
+        </ul>
+    
+        <div class="contact-info">
+            <h3>📌 Контакти</h3>
+            <p>✉️ <strong>Имейл:</strong> jp0429199&#64;gmail.com</p>
+            <p>📞 <strong>Телефон:</strong> +359 89 430 2833</p>
+        </div>
+    </div>
