--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -16,7 +16,7 @@
       <h1 style="font-size: 26px">За нас</h1>
     </a>
     <a routerLink="/contact" class="tr">
-      <h1 style="font-size: 26px">Контакти</h1>
+      <h1 style="font-size: 26px">Помощ</h1>
     </a>
     @if(this.authService.isLoggedIn()){
     <a class="tr" (click)="logout()">
