--- a/client/src/app/features/user/pages/profile/profile.component.html
+++ b/client/src/app/features/user/pages/profile/profile.component.html
@@ -9,16 +9,13 @@
   <hr style="width: 40%" />
   <img src="" id="profile-picture" />
   <h1 style="overflow: hidden; color: whitesmoke">
-    Имейл: &lt;твоят имейл&gt;
+    Име: {{user?.username}}
+  </h1>
+  <h1 style="overflow: hidden; color: whitesmoke">
+    Имейл: {{user?.email}}
   </h1>
   <h1 style="overflow: hidden; color: whitesmoke">
     Дата на присъединяване: &lt;дата&gt;
-  </h1>
-  <h1 style="overflow: hidden; color: whitesmoke">
-    Срок на плана: &lt;крайна дата&gt;
-  </h1>
-  <h1 style="overflow: hidden; color: whitesmoke">
-    <a href="">Настройки на акаунта</a>
   </h1>
   <hr />
   <h5 style="color: whitesmoke; font-size: 19px">
