--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -63,3 +63,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   margin-top: 20px;
   font-size: 16px;
 }
+
+avg path {
+	fill: #00394f;
+	stroke: #eee;
+	stroke-width: .25;
+}
+svg path {
+	fill: darkgreen;
+}
+svg path:hover {
+	fill: lightgreen;
+	transition: 0.6s;
+	cursor: pointer;
+}
+svg {
+	transform: scale(1.6);
+}
