Add regions pages

--- a/client/src/app/features/map/pages/map-region/map-region.component.html
+++ b/client/src/app/features/map/pages/map-region/map-region.component.html
@@ -1,12 +1,13 @@
 <main>
   <div class="info-panel">
+    <a routerLink="/map">Към картата</a>
     <h2 style="text-align: center">Инфорамция за обекта</h2>
     <hr style="width: 50%" />
-    <p #paragraph>Click on a location to see details here.</p>
+    <p #paragraph>{{text}}</p>
   </div>
   <div class="centered-flex" style="height: 400pt; width: 673pt">
     <iframe
-      src="../../../../../assets/bulg2.html"
+      [attr.src]="safeRegionMapUrl"
       style="height: 100%; width: 100%; border: none"
     ></iframe>
   </div>
