--- a/client/src/app/features/user/pages/login/login.component.css
+++ b/client/src/app/features/user/pages/login/login.component.css
@@ -1,31 +1,48 @@
-.input-style {
-    height: 33px; 
-    font-size: 30px;
-    background-color: black;
-    color: whitesmoke;
-    border-top: none;
-    border-left: none;
-    border-right: none;
-    outline: none;
+
+.form-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    flex-direction: column;
+    margin-top: 50px;
 }
 
-#login-style {
-    border-radius: 15px;
-    margin: 0 auto;
-    width: 60%;
-    height: 500pt;
-    background-color: black;
+.form-container h2 {
+    margin-bottom: 20px;
+    font-size: 28px;
 }
 
-#verify-button {
-    border-radius: 0px;
+.form-panel {
+    background-color: black;
+    padding: 40px;
+    border-radius: 10px;
     text-align: center;
+    color: white;
+    width: 400px;
+    margin-top: 20px;
+}
+
+.form-panel label {
     display: block;
-    margin: 0 auto;
-    line-height: 6%;
-    height: 6%;
-    width: 30%;
-    font-size: 30px;
-    background-color: lightgreen;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    margin-bottom: 5px;
+}
+
+.form-panel input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: none;
+    border-radius: 5px;
+}
+
+.form-panel button {
+    background-color: green;
+    color: white;
+    padding: 12px 18px;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    border-radius: 5px;
 }
