--- a/client/src/app/features/user/pages/register/register.component.html
+++ b/client/src/app/features/user/pages/register/register.component.html
@@ -1,96 +1,66 @@
-<br />
+<div class="form-container">
+  <h2>Регистриране</h2>
+  <div class="form-panel">
+    <form [formGroup]="form" (ngSubmit)="register()">
+      <label for="first-name">Име:</label>
+      <input
+        type="text"
+        id="first-name"
+        name="first-name"
+        required
+        formControlName="username"
+      />
 
-<div id="register-style">
-  <form [formGroup]="form" (ngSubmit)="register()">
-    <section
-      style="height: 18%; margin: 0; padding: 0; align-items: baseline"
-      class="centered-flex"
-    >
-      <h1 style="color: whitesmoke; font-size: 65px">Регистрация</h1>
-    </section>
-    <hr style="width: 40%" />
-    <section style="height: 13%; width: 90%" class="centered-flex">
-      <i
-        ><h1 style="color: whitesmoke; font-size: 33px; text-align: center">
-          Име:
-          <input
-            style="width: 70%"
-            class="input-style"
-            formControlName="username"
-          />
-        </h1>
-      </i>
-    </section>
-    <hr style="width: 40%"/>
-    <section style="height: 13%; width: 90%" class="centered-flex">
-      <i
-        ><h1 style="color: whitesmoke; font-size: 33px; text-align: center">
-          Имейл:
-          <input
-            style="width: 70%"
-            class="input-style"
-            formControlName="email"
-          />
-        </h1>
-        @if(form.get('email')?.touched){
-        <app-email-error [email]="form.get('email')"/>
+      <label for="email">Имейл:</label>
+      <input
+        type="email"
+        id="email"
+        name="email"
+        required
+        formControlName="email"
+      />
+      @if(form.get('email')?.touched){
+        <app-email-error [email]="form.get('email')" />
         }
-      </i>
-    </section>
-    <ng-container formGroupName="passGroup">
-      <section style="height: 13%; width: 90%" class="centered-flex">
-        <i
-          ><h1 style="color: whitesmoke; font-size: 33px; text-align: center">
-            Парола:
-            <input
-              type="password"
-              style="width: 70%"
-              class="input-style"
-              formControlName="password"
-            />
-          </h1>
-          @if(form.get('passGroup')?.get('password')?.touched){
-          <app-password-error [password]="form.get('passGroup')?.get('password')"/>
+
+      <ng-container formGroupName="passGroup">
+        <label for="password">Парола:</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          required
+          formControlName="password"
+        />
+        @if(form.get('passGroup')?.get('password')?.touched){
+          <app-password-error
+            [password]="form.get('passGroup')?.get('password')"
+          />
           }
-        </i>
-      </section>
-      <section style="height: 14%; width: 90%" class="centered-flex">
-        <i
-          ><h1 style="color: whitesmoke; font-size: 33px; text-align: center">
-            Потвърди парола:
-            <input
-              type="password"
-              style="width: 50%"
-              class="input-style"
-              formControlName="rePass"
-            />
-          </h1>
-          @if(form.get('passGroup')?.get('rePass')?.touched){
+
+        <label for="password">Повтори парола:</label>
+        <input
+          type="password"
+          id="password"
+          name="password"
+          required
+          formControlName="rePass"
+        />
+        @if(form.get('passGroup')?.get('rePass')?.touched){
           <ng-container>
             @if(form.get('passGroup')?.get('rePass')?.errors?.['required']){
-            <p
-              class="error"
-            >
-              Потвърди парола е задължителна!
-            </p>
-        }
-        @if(form.get('passGroup')?.get('rePass')?.errors?.['passwordMatchValidator']){
-            <p
-              class="error"
-            >
-              Двете пароли не са еднакви!
-            </p>
-        }
+            <p class="error">Потвърди парола е задължителна!</p>
+            }
+            @if(form.get('passGroup')?.get('rePass')?.errors?.['passwordMatchValidator']){
+            <p class="error">Двете пароли не са еднакви!</p>
+            }
           </ng-container>
-        }
-        </i>
-      </section>
-    </ng-container>
-    <button id="verify-button" [disabled]="!form.valid">Регистрирай се</button>
-    <hr />
-    <h5 style="color: whitesmoke; font-size: 19px">
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Вече имате акаунт?
-      <a routerLink="/login">Влезте в акаунта си</a>
-    </h5>
-  </form>
+          }
+      </ng-container>
+
+      <button type="submit" [disabled]="!form.valid">Регистрирай се</button>
+    </form>
+    <br />
+    <p>Вече имаш профил? <a routerLink="/login" class="switch-link">Влез в профила си!</a></p>
+  </div>
 </div>
