--- a/client/src/app/features/map/pages/map-region/map-region.component.css
+++ b/client/src/app/features/map/pages/map-region/map-region.component.css
@@ -5,5 +5,11 @@
     border-radius: 10px;
     color: white;
     height: 500px;
+    margin-bottom: 150px;
     overflow-y: auto;
 }
+
+.formatted-text {
+    white-space: pre-line;
+    word-wrap: break-word;
+  }
