--- a/client/src/app/features/map/pages/map-region/map-region.component.html
+++ b/client/src/app/features/map/pages/map-region/map-region.component.html
@@ -3,7 +3,7 @@
     <a routerLink="/map">Към картата</a>
     <h2 style="text-align: center">Инфорамция за обекта</h2>
     <hr style="width: 50%" />
-    <p #paragraph>{{text}}</p>
+    <p #paragraph class="formatted-text">{{text}}</p>
   </div>
   <div class="centered-flex" style="height: 400pt; width: 673pt">
     <iframe
