--- a/client/src/app/shared/components/footer/footer.component.css
+++ b/client/src/app/shared/components/footer/footer.component.css
@@ -3,8 +3,9 @@ footer {
     color: white;
     text-align: center;
     padding: 15px;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     font-size: 16px;
+    margin-top: 50px;
   }
