--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <header class="container1">
   <section id="left-sec">
     @if(this.authService.isLoggedIn()){
-    <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/map" >ГеоБългария</h1>
+    <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/map" ><img src="logo.png" style="width: 8%;">ГеоБългария</h1>
     } @else {
     <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/" >ГеоБългария</h1>
     }
