--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -1,5 +1,6 @@
 <header class="container1">
   <section id="left-sec">
+    <img src="logo.png" style="width: 4%;">
     @if(this.authService.isLoggedIn()){
     <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/map" >ГеоБългария</h1>
     } @else {
