Updated the name 'GeoBulgaria' in the homepage

--- a/client/src/app/features/home/pages/homepage/homepage.component.html
+++ b/client/src/app/features/home/pages/homepage/homepage.component.html
@@ -3,7 +3,7 @@
     <main id="guest-home">
         <div class="slideshow-container">
             <div class="welcome-panel">
-                <h1>Добре дошли в GeoBulgaria!</h1>
+                <h1>Добре дошли в ГеоБългария!</h1>
                 <p>Открийте интерактивна карта и полезна информация за различни географски точки в България.</p>
                 <a routerLink="/register" class="btn">Регистрирайте се</a>
                 <a routerLink="/login" class="btn">Вход</a>
