--- a/client/src/app/shared/components/nav/nav.component.css
+++ b/client/src/app/shared/components/nav/nav.component.css
@@ -22,6 +22,13 @@ a {
     text-align: center;
 }
 
+.container3 {
+    display: grid;
+    grid-template-columns: 28% 40%; /* Two columns of equal width */
+    gap: 32%;
+    text-align: center;
+}
+
 .tr {
     display: flex;
     justify-content: center; /* Centers content horizontally */
