--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -1,12 +1,16 @@
 <header class="container1">
-  <section id="left-sec">
-    <img src="logo.png" style="width: 4%;">
+  <div id="left-sec" class="container3">
     @if(this.authService.isLoggedIn()){
-    <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/map" >ГеоБългария</h1>
+    <img src="logo.png" style="width: 60%; cursor: pointer" routerLink="/map">
     } @else {
-    <h1 style="font-size: 60px; margin: 0; cursor: pointer" routerLink="/" >ГеоБългария</h1>
+    <img src="logo.png" style="width: 60%; cursor: pointer" routerLink="/">
     }
-  </section>
+    @if(this.authService.isLoggedIn()){
+    <h1 style="font-size: 60px; margin: 0" >ГеоБългария</h1>
+    } @else {
+    <h1 style="font-size: 60px; margin: 0" >ГеоБългария</h1>
+    }
+  </div>
   <div class="container2">
     @if(this.authService.isLoggedIn()){
     <a routerLink="/map" class="tr">
