Added the refister and login buttons to the home page

--- a/client/src/app/features/home/pages/homepage/homepage.component.html
+++ b/client/src/app/features/home/pages/homepage/homepage.component.html
@@ -10,11 +10,15 @@
     <br>
     <div class="text-panel">
         <div class="slideshow">
-            <img src="{{imageUrl()}}" class="slide active">
+            
         </div>
         <div class="text-content">
             <h1>Добре дошли в ГеоБългария!</h1>
             <p>Открийте интерактивна карта и полезна информация за различни географски точки в България.</p>
+        </div>
+        <div class="buttons">
+            <a href="register.html" class="btn">Регистрирай се</a>
+            <a href="login.html" class="btn">Влез</a>
         </div>
     </div>
     </main>
