--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -17,6 +17,10 @@
       <h1 style="font-size: 26px">Карта</h1>
     </a>
 
+    <a routerLink="/tests" class="tr">
+      <h1 style="font-size: 26px">Тестове</h1>
+    </a>
+
     <a routerLink="/profile" class="tr">
       <h1 style="font-size: 26px">Профил</h1>
     </a>
