--- a/client/src/app/features/map/pages/map-region/map-region.component.css
+++ b/client/src/app/features/map/pages/map-region/map-region.component.css
@@ -21,7 +21,7 @@
   
   .popover-content {
     position: absolute;
-    top: 100%; /* Position below the button */
+    top: 100%;
     left: 50%;
     transform: translateX(-50%);
     margin-top: 8px;
@@ -43,4 +43,19 @@
   
   .btn {
     margin: 20px;
+  }
+
+  .iframe-container {
+    width: 60%; /* Or any fixed width */
+    height: 0;
+    padding-bottom: 40%; /* 16:9 aspect ratio */
+    position: relative;
+  }
+
+  .scaled-iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+    margin-top: -90px;
   }
