--- a/client/src/app/features/map/pages/map-main/map-main.component.html
+++ b/client/src/app/features/map/pages/map-main/map-main.component.html
@@ -1,5 +1,5 @@
 <body>
-    <div class="centered-flex" style="height: 500pt;">
+    <div class="centered-flex" style="height: 500pt; cursor: crosshair;">
     <svg
        xmlns:mapsvg="http://mapsvg.com"
        xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -11,7 +11,7 @@
        height="400"
        >
        <a routerLink="/map/blagoevgrad">
-      <path
+      <path 
          d="m 110.72813,285.41737 2.65,-0.98 3.16,0.75 2.6,-2.03 1.29,-2.22 1.43,-7.87 1.18,-1.51 2.39,-0.09 1.32,0.9 2.86,-0.81 1.92,3.83 3.38,1.53 1.53,0.08 1,-0.81 -1.33,-2.4 0.53,-1.33 2.72,0 0,0 -1,2.41 0.27,2.57 2.21,1.33 -0.29,3.62 1.69,5.06 -0.35,2.7 2.36,1.84 -0.06,0.62 -3.88,1.71 -3.21,3.3 -0.35,1.29 2.47,17.2 2.35,2.64 6.02,2.12 10.33,6.66 7.51,7.61 5.82,4.57 0,0 1.06,2.27 -3.17,4.45 0.35,3.28 -2.46,6.06 0.13,2.87 0,0 -0.17,5.02 1.21,2.54 -2.32,1.84 -2.33,-0.17 -0.82,-1.73 -4.36,3.82 -2.86,-1.56 -1.23,-2.91 -1.73,-1.05 -0.65,2.91 -1.48,1.02 -1.22,-0.44 -2.18,0.55 -0.61,1.22 -4.95,0.44 -1.1,2.79 -2.26,2.5 -0.64,-0.79 -2.9,-0.7 -3.47,0.45 -1.97,-0.76 -2.46,1.97 -0.42,2.08 -2.81,0.43 -1.82,-0.24 -1.79,-1.66 -2.92,0.41 -2.2,-2.26 -4.02,0.76 -4.69,-0.96 -1.63,0.9 -1.67,-0.31 -6.030001,4.78 -1.99,-4.55 -3.8,-0.07 -2.49,2.34 -2.47,0.94 -0.57,1.05 0.43,2.43 -2.37,3.16 -6.63,1.48 -5.29,-0.13 -5.54,-2.64 -2.06,0.68 -6.56,-1.25 -0.38,-0.32 1.19,-1.36 1.68,-0.41 -0.34,-3.43 0.52,-1.72 -1.42,-3.08 2.61,-3.72 -1.38,-2.27 0.27,-1.42 -0.62,-0.29 -0.25,-2.31 1.02,-1.22 0.1,-1.58 -1.13,-2.54 1.13,-1.06 0.27,-2.33 -0.73,-2.28 -1.28,-1.08 0.21,-4.03 -0.63,-1.91 1.04,-1.77 2.51,-0.18 -0.28,-1.07 1.12,-2.18 3.96,-5.01 -0.19,-2.44 -2.13,-4.87 -4.44,-0.93 0.09,-1.81 -2.38,-3.83 -0.42,-3.93 -2.02,-3.79 -1.33,-0.11 -0.74,-5.09 -1.96,-2.64 0.31,-5.24 -0.17,-2.66 -0.94,-0.94 0.25,-1.44 0,0 3.92,-1.89 2.09,-9.61 1.88,-1.37 0.97,1.09 1.51,4.9 3.75,-0.17 2.25,2.94 9.47,-2.38 4.83,-4.42 1.22,-0.28 12.29,4.11 3.36,0.27 3.040001,2.19 6.68,-1.81 z"
          title="Blagoevgrad"
          id="BG-01" />
