--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -45,8 +45,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 html, body { height: 100%; }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
 .snackbar-success {
   background-color: #4caf50;
   color: white;
@@ -79,4 +77,7 @@ svg path:hover {
 }
 svg {
 	transform: scale(1.6);
+}
+html, body {
+  background-color: lightblue !important;
 }
