--- a/client/src/app/features/map/pages/map-region/map-region.component.css
+++ b/client/src/app/features/map/pages/map-region/map-region.component.css
@@ -21,10 +21,9 @@
   
   .popover-content {
     position: absolute;
-    top: 100%;
+    top: 10px; 
     left: 50%;
     transform: translateX(-50%);
-    margin-top: 8px;
     padding: 8px 12px;
     background-color: #333;
     color: #fff;
@@ -33,7 +32,8 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     text-align: center;
-  }
+}
+
   
   .popover-content img {
     max-width: 200px;
