Added a "back to the map" button

--- a/client/src/app/features/map/pages/map-region/map-region.component.html
+++ b/client/src/app/features/map/pages/map-region/map-region.component.html
@@ -1,4 +1,6 @@
 <main>
+  <button class="back-button" (click)="goBack()">&laquo; Към картата</button>
+  
   <div class="iframe-container">
     <iframe class="scaled-iframe" [attr.src]="safeRegionInfoUrl" style="height: 100%; width: 100%; border: none"></iframe>
   </div>
