--- a/client/src/app/features/map/pages/map-region/map-region.component.css
+++ b/client/src/app/features/map/pages/map-region/map-region.component.css
@@ -59,3 +59,18 @@
     border-radius: 30px;
     margin-top: -90px;
   }
+
+  .back-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-bottom: 10px;
+}
+
+.back-button:hover {
+    background-color: #0056b3;
+}
