--- a/client/src/app/features/test/pages/test/test.component.html
+++ b/client/src/app/features/test/pages/test/test.component.html
@@ -6,7 +6,7 @@
       <p>Описание: {{ test?.description }}</p>
       <p>Брой въпроси: {{ test?.questions?.length }}</p>
       <div class="confirm-actions">
-        <button class="btn btn-primary" routerLink="/test/{{ test?._id }}/0">Започни теста</button>
+        <button class="btn btn-primary" routerLink="/tests/{{ test?._id }}/1">Започни теста</button>
         <button class="btn btn-secondary" routerLink="/tests">Назад</button>
       </div>
     </section>
