--- a/client/src/app/features/test/pages/tests/tests.component.html
+++ b/client/src/app/features/test/pages/tests/tests.component.html
@@ -3,7 +3,7 @@
     <div class="test-card">
         <h2>{{ test.title }}</h2>
         <p>{{ test.description }}</p>
-        <button class="btn" [routerLink]="'/tests/' + test._id">View Test</button>
+        <button class="btn" [routerLink]="'/tests/' + test._id">Прегледай теста</button>
       </div>
     }
   </main>
