Moved the poopover to the right
Please tell me this f-ing works 😭🙏🙏🙏

--- a/client/src/app/features/map/pages/map-region/map-region.component.html
+++ b/client/src/app/features/map/pages/map-region/map-region.component.html
@@ -11,13 +11,15 @@
       class="region-map"
       [attr.src]="safeRegionMapUrl"
       style="height: 100%; width: 100%; border: none"
-    >@if(showPopover){
-      <div 
-        class="poopover-content" 
-      >
-        <img [src]="imageSrc" alt="Popover Image" />
-        <p>{{ region }}</p>
-      </div>
-      }</iframe>
+    ></iframe>
   </div>
+
+  @if(showPopover){
+    <div 
+      class="poopover-content" 
+    >
+      <img [src]="imageSrc" alt="Popover Image" />
+      <p>{{ region }}</p>
+    </div>
+    }
 </main>
