--- a/client/src/app/features/map/pages/map-region/map-region.component.css
+++ b/client/src/app/features/map/pages/map-region/map-region.component.css
@@ -15,10 +15,10 @@
   }
   
   .poopover-content {
-    position: fixed; /* Fixed positioning for viewport placement */
-    top: 100px; /* Space from the top of the viewport */
-    right: 10%; /* Space from the right of the viewport */
-    padding: 8px 120px;
+    position: fixed;
+    top: 100px;
+    right: 20px;
+    padding: 8px 20px;
     background-color: #333;
     color: #fff;
     border-radius: 4px;
@@ -26,14 +26,14 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     z-index: 1000;
     text-align: center;
-    transform: scale(69);
-  }
-  
-  .poopover-content img {
-    max-width: 1000px;
+}
+
+.poopover-content img {
+    max-width: 300px;
     border-radius: 4px;
-    margin-bottom: 80px;
-  }
+    margin-bottom: 10px;
+}
+
   
   .btn {
     margin: 20px;
