--- a/client/src/app/shared/components/nav/nav.component.html
+++ b/client/src/app/shared/components/nav/nav.component.html
@@ -1,9 +1,9 @@
 <header class="container1">
   <div id="left-sec" class="container3">
     @if(this.authService.isLoggedIn()){
-    <img src="logo.png" style="width: 60%; cursor: pointer" routerLink="/map">
+    <img src="/themed-photos/logo.png" style="width: 60%; cursor: pointer" routerLink="/map">
     } @else {
-    <img src="logo.png" style="width: 60%; cursor: pointer" routerLink="/">
+    <img src="/themed-photos/logo.png" style="width: 60%; cursor: pointer" routerLink="/">
     }
     @if(this.authService.isLoggedIn()){
     <h1 style="font-size: 60px; margin: 0" >ГеоБългария</h1>
