Add additional data on info pages

--- a/client/src/app/features/home/pages/about/about.component.html
+++ b/client/src/app/features/home/pages/about/about.component.html
@@ -10,6 +10,7 @@
             <li>✔️ Интерактивна карта с информация за различни региони</li>
             <li>✔️ Възможност за регистрация и персонализиране на профила</li>
             <li>✔️ Бърз достъп до полезни географски факти</li>
+            <li>✔️ Тестова система за проверка на знанията</li>
         </ul>
     
         <div class="contact-info">
