--- a/client/src/app/features/home/pages/contact/contact.component.html
+++ b/client/src/app/features/home/pages/contact/contact.component.html
@@ -14,6 +14,12 @@
     <p>- В профилната страница можете да видите своята информация.</p>
     <p>- Ако искате да изтриете акаунта си, използвайте бутона <strong>„Изтриване на профил“</strong>.</p>
 
+    <h3>🔹 Как да използваме тестовата система?</h3>
+    <p>- След регистрация можете да достъпите страницата с наличните тестове чрез бутона <strong>"Тестове"</strong> от навигацията</p>
+    <p>- Изберете тест, като натиснете бутона "Прегледай тест" на съответния тест</p>
+    <p>- Натискаме бутона "Започни теста"</p>
+    <p>- Отваря се страница с въпроси и възможност за отговор. След последния въпрос можем да предадем теста.</p>
+
     <div class="contact-info">
         <h3>📞 Ако имате въпроси, свържете се с нас:</h3>
         <p>✉️ <strong>Имейл:</strong> jp0429199&#64;gmail.com</p>
