Update logout button name

--- a/client/src/app/features/user/pages/profile/profile.component.html
+++ b/client/src/app/features/user/pages/profile/profile.component.html
@@ -5,7 +5,7 @@
       <p><strong>Име:</strong> {{user?.username}}</p>
       <p><strong>Имейл:</strong> {{user?.email}}</p>
       <br>
-      <button class="logout-btn" (click)="authService.logout()">Излез</button>
+      <button class="logout-btn" (click)="authService.logout()">Изход</button>
 
       <div class="tests-section">
         <h3>Тестове и резултати</h3>
