Add emotion to the test anwers :)

--- a/client/src/app/features/test/pages/question/question.component.html
+++ b/client/src/app/features/test/pages/question/question.component.html
@@ -18,7 +18,7 @@
     </div>
     @if(answered){
     <div class="correct">
-      {{ correct ? "Верен отговор" : "Грешен отговор" }}
+      {{ correct ? "Верен отговор! 🥳" : "Грешен отговор... 😭" }}
     </div>
     @if(!correct){
     <div class="correct-ans">
